unpackaged/main/default/objects/ET_Other_Cost_Request__c/ET_Other_Cost_Request__c.object-meta.xml
<CustomObject>
    <label>Other Cost Request</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Cost Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Other Cost Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>