unpackaged/main/default/objects/ET_Other_Cost_Request__c/fields/ET_Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Cost_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cost Type</label>
    <type>TextArea</type>
</CustomField>