unpackaged/main/default/objects/ET_Other_Cost_Request__c/fields/ET_Cost_Value__c.field-meta.xml
<CustomField>
    <fullName>ET_Cost_Value__c</fullName>
    <label>Cost Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>