unpackaged/main/default/objects/ET_Other_Cost_Request__c/fields/ET_Other_Cost_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>ET_Other_Cost_Line_Number__c</fullName>
    <label>Other_Cost_Line_Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>