unpackaged/main/default/objects/ET_Other_Cost_Request__c/fields/ET_Other_Cost_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Other_Cost_Request_Type__c</fullName>
    <formula>IF(ET_Pricing_Service_Request__c != null, &#39;Service Request&#39;, IF( Vehicle_Request__c != null, &#39;Vehicle&#39;,  Work_force_Request__r.ET_Workforce_Record_Type_Name__c ))</formula>
    <label>Other Cost Request Type</label>
    <type>Text</type>
</CustomField>