unpackaged/main/default/objects/ET_Other_Cost_Request__c/fields/ET_Pricing_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>ET_Pricing_Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Service Request</label>
    <referenceTo>ET_Pricing_Service_Request__c</referenceTo>
    <relationshipLabel>Other Cost Requests</relationshipLabel>
    <relationshipName>Other_Cost_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>