unpackaged/main/default/objects/ET_Other_Cost_Request__c/fields/Other_Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Cost_Type__c</fullName>
    <label>Other Cost Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Predefined</fullName>
            </value>
            <value>
                <fullName>Dynamic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>