unpackaged/main/default/objects/ET_Other_Cost_Request__c/fields/Other_Requirement_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Requirement_API_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Requirement API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>