unpackaged/main/default/objects/ET_Other_Cost_Request__c/fields/Vehicle_Request__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Request</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Other Cost Requests</relationshipLabel>
    <relationshipName>Other_Cost_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>