unpackaged/main/default/objects/ET_Other_Cost_Request__c/fields/Work_force_Request__c.field-meta.xml
<CustomField>
    <fullName>Work_force_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work force Request</label>
    <referenceTo>ET_Work_force__c</referenceTo>
    <relationshipLabel>Other Cost Requests</relationshipLabel>
    <relationshipName>Other_Cost_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>