unpackaged/main/default/objects/ET_Other_Cost_Request__c/recordTypes/Other_Cost.recordType-meta.xml
<RecordType>
    <fullName>Other_Cost</fullName>
    <active>true</active>
    <label>Other Cost</label>
</RecordType>