unpackaged/main/default/objects/ET_Other_Cost_Request__c/recordTypes/Other_Requirement.recordType-meta.xml
<RecordType>
    <fullName>Other_Requirement</fullName>
    <active>true</active>
    <label>Other Requirement</label>
</RecordType>